<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Samhita 2K16</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
 <string name="hello">Hello</string>
    <dimen name="count">10dp</dimen>

    <string name="welcome1">Create Account Samhita 2K16</string>
    <string name="welcome">Registered Geeks Samhita 2K16</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>    
    <string name="onsite">Onsite Events Samhita 2K16</string>
    <string name="online">Online Events Samhita 2K16</string>
    <string name="general">General Events Samhita 2K16</string>
    <string name="contact">Contact Samhita 2K16 Team</string>
    <string name="mega_event">Mr and Ms Techie 2016</string>
    <string name="mega_event_content">Technical Discussions and Interviews with winners and runners of individual events</string>
    
    <string name="string_choose_file">choose_file</string>
	<string name="string_upload_image">Register For Samhita</string>
	<string name="string_view_image">Registered Users</string>
	<string name="string_register">Register</string>
	<string name="user">Username</string>
	<string name="pass">Password</string>
	<string name="mailid">Mail Id</string>
	<string name="phoneno">Phone Number</string>
    <string name="department">Department</string>
    <string name="year">Year</string>
    <string name="college">college</string>
    <string name="Results">Results</string>
    
    <string name="workshop">Workshop Samhita 2k16</string>
    <string name="android_workshop">Android Workshop Registration Samhita 2k16</string>
    <string name="python_workshop">Python Workshop Registration Samhita 2k16</string>
    <string name="iot_workshop">IOT Workshop Registration Samhita 2k16</string>
    <string name="video_workshop">Video Analysis Workshop Registration Samhita 2k16</string>
    <string name="network_workshop">Network Workshop Registration Samhita 2k16</string>
    <string name="hacking_workshop">Ethical Hacking Workshop Registration Samhita 2k16</string>
    <string-array name="countries">
        <item>Create Account</item>
        <item>Onsite Events</item>
        <item>Online Events</item>
        <item>General Events</item>
        <item>Mega Event</item>
        <item>Workshop</item>
        <item>Contact us</item>
    </string-array>
</resources>
