<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:background="@drawable/back1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:fillViewport="true">

<LinearLayout android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
    

    
 <EditText android:id="@+id/username"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:textColorHint="#000"
     android:hint="@string/user"
/>
 <EditText android:id="@+id/college"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:textColorHint="#000"
     android:hint="@string/college"
/>
 <EditText android:id="@+id/phone"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:textColorHint="#000"
     android:hint="@string/phoneno"
/>
 <EditText android:id="@+id/mail"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:textColorHint="#000"
     android:hint="@string/mailid"
/>
 <Spinner android:id="@+id/department"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:prompt="@string/department"
/>
  <Spinner android:id="@+id/year"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:prompt="@string/year"
/>
  
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_upload_image"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:background="@drawable/rounded_border"
        android:id="@+id/buttonUpload" />
 
 
   <!-- <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_view_image"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:background="@drawable/rounded_border"
        android:id="@+id/buttonViewImage" />-->
 
 
</LinearLayout>
</ScrollView>