<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<LinearLayout android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
 
  <!--   <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_file"
        android:id="@+id/buttonChoose" />-->
<!-- <LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal">-->

     <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
         android:layout_height="150dp"
         android:layout_weight="1"
		 android:layout_gravity="center"
         android:onClick="call"
         android:src="@drawable/stuff" />

    
 <EditText android:id="@+id/username"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"

     android:hint="@string/user"
/>
 <EditText android:id="@+id/mail"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:hint="@string/mailid"
/>
 <EditText android:id="@+id/phone"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:hint="@string/phoneno"
/>
 <EditText android:id="@+id/password"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:hint="@string/pass"
/>
 
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_upload_image"
        android:id="@+id/buttonUpload" />
 
 
     <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_view_image"
        android:id="@+id/buttonViewImage" />
 
 
</LinearLayout>
</ScrollView>